# OpenTTD

./: .gitignore  AGENTS.md  COMPILING.md  DEVELOPING.md
.githooks/: post-rewrite
.worklog/: tui-state.json  worklog-data.jsonl
rust/: Cargo.toml
rust/openttd/: Cargo.toml
rust/openttd_cli/: Cargo.toml
rust/openttd_cli/src/: main.rs
rust/openttd_core/: Cargo.toml
rust/openttd_core/src/: company.rs  endian.rs  error.rs  industry.rs  lib.rs  map.rs  station.rs  town.rs  types.rs  vehicle.rs
rust/openttd_core/tests/: compatibility.rs
rust/openttd_gfx/: Cargo.toml
rust/openttd_gfx/examples/: basic_rendering.rs
rust/openttd_gfx/src/: font.rs  lib.rs
rust/openttd_gui/: Cargo.toml
rust/openttd_gui/examples/: gui_demo.rs
rust/openttd_gui/src/: date_selector.rs  highscore.rs  league.rs  lib.rs  main_menu.rs  main_menu_window.rs  settings_audio.rs  settings_gameplay.rs  settings_graphics.rs  toolbar.rs  world_gen.rs
rust/openttd_savegame/: Cargo.toml
rust/openttd_savegame/src/: chunk.rs  gamma.rs  header.rs  lib.rs  savegame.rs  types.rs
rust/openttd_savegame/tests/: compatibility_tests.rs  header_tests.rs
rust/openttd_video/: Cargo.toml
rust/openttd_video/examples/: event_loop.rs  window_modes.rs
rust/openttd_video/src/: event.rs  lib.rs  sdl2.rs  sdl2_driver.rs  software.rs  tests.rs
rust/openttd_video/tests/: window_modes.rs
