[package]
name = "openttd_core"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_with = "3.0"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1"
bincode = "1"
