[package]
name = "openttd_video"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
openttd_core = { path = "../openttd_core" }
sdl2 = { version = "0.36", optional = true }
thiserror = "1.0"
log = "0.4"

[features]
default = ["stub"]
stub = []
sdl2-backend = ["sdl2"]
sdl2 = ["dep:sdl2"]

[dev-dependencies]
env_logger = "0.11"
